--- a/src/components/registForm.css
+++ b/src/components/registForm.css
@@ -1,4 +1,3 @@
-/* Estilo para el contenedor principal */
 .container {
     width: 100%;
     margin: 0 auto;
@@ -7,7 +6,14 @@
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
-  
+  .api-error {
+    color: red;
+    margin-bottom: 10px;
+}
+.api-ok {
+    color: green;
+    margin-bottom: 10px;
+}
   form {
     display: flex;
     flex-direction: column;
